# DreamCore

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  server 1.js  server.js  tc_register_server_js_idempotent_create_reset_gameaccount_verbatim_drop_in.js  worldserver.conf
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
Development/: server.js
DreamCoreWeb/: DreamCore.rar  DreamCore_server.js  itemEnums.js  package-lock.json  package.json  server.js  tc-register.env  tc-register.service  trinitySoap.js  worldserver.conf
DreamCoreWeb/SQL Dumps/: dump-auth-202511171336.sql  dump-characters-202511171335.sql  dump-tc_auth_335-202511171335.sql  dump-tc_characters_335-202511171335.sql  dump-tc_world_335-202511180526.sql  dump-world-202511180524.sql
DreamCoreWeb/lib/: trinitySoap.js
DreamCoreWeb/scripts/: migrate_portal_credentials.js
Patched/: trinitySoap.patched.js
api/: __init__.py
api/routes/: __init__.py  explanations.py
cmake/macros/: ConfigureBaseTargets.cmake  FindMySQL.cmake
config/: perception.yaml  world_model.yaml
dep/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/zlib/: trees.c
docs/: build-report-ubuntu-24.04.md  character-roster-preview.html  clients.md  portal_user_migration.md
persistence/: __init__.py  audit.py
pydantic/: __init__.py
self_model/: __init__.py  hooks.py
soulmind/explanation/: __init__.py  renderer.py  templates.py
soulmind/perception/: ingestor.py  llm_client.py  prompt_templates.py  schemas.py
soulmind/world_model/: __init__.py  assistant.py  reasoning_prompts.py  schemas.py  state_serialization.py  validators.py
src/: CMakeLists.txt
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  Resolver.h
src/compat/: CMakeLists.txt  openssl_compat.cpp  openssl_compat.hpp
src/server/bnetserver/REST/: LoginRESTService.cpp
src/server/database/Database/: MySQLWorkaround.h
src/server/database/PrecompiledHeaders/: databasePCH.h
src/server/database/Updater/: UpdateFetcher.cpp
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: BattlenetAccountMgr.cpp
src/server/game/Warden/: Warden.cpp  WardenMac.cpp  WardenWin.cpp
tests/: conftest.py
tests/explanation/: test_end_to_end.py  test_renderer.py  test_templates.py
tests/perception/: test_ingestor.py
tests/world_model/: test_reasoning_assistant.py
tools/: detect_client.py
