add_subdirectory(genrev)
add_subdirectory(common)

if(SERVERS)
  add_subdirectory(server)
endif()

if(TOOLS)
  add_subdirectory(tools)
endif()
dc_collect(COMMON_SRCS DIR "${CMAKE_SOURCE_DIR}/src/common" EXCLUDES ${DC_EXCLUDES})
add_library(dc_common STATIC ${COMMON_SRCS})
target_link_libraries(dc_common PRIVATE trinity-core-interface dc_compat)
target_include_directories(dc_common PRIVATE ${COMMON_SRCS_INCLUDES})

dc_collect(SHARED_SRCS DIR "${CMAKE_SOURCE_DIR}/src/server/shared" EXCLUDES ${DC_EXCLUDES})
add_library(dc_shared STATIC ${SHARED_SRCS})
target_link_libraries(dc_shared PRIVATE trinity-core-interface dc_compat)
target_include_directories(dc_shared PRIVATE ${SHARED_SRCS_INCLUDES})

dc_collect(GAME_SRCS DIR "${CMAKE_SOURCE_DIR}/src/server/game" EXCLUDES ${DC_EXCLUDES})
add_library(dc_game STATIC ${GAME_SRCS})
target_link_libraries(dc_game PRIVATE trinity-core-interface dc_compat)
target_include_directories(dc_game PRIVATE ${GAME_SRCS_INCLUDES})

dc_collect(WORLD_SRCS DIR "${CMAKE_SOURCE_DIR}/src/server/worldserver" EXCLUDES ${DC_EXCLUDES})
add_executable(worldserver ${WORLD_SRCS})
target_link_libraries(worldserver PRIVATE dc_common dc_shared dc_game trinity-core-interface dc_compat)
target_include_directories(worldserver PRIVATE ${WORLD_SRCS_INCLUDES})
add_subdirectory(server)
